--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "fetch-mock": "^7.3.1",
+    "prop-types": "^15.7.2",
+    "querystring": "^0.2.0",
     "react": "16.8.3",
     "react-native": "0.59.4"
   },
